--- a/package.json
+++ b/package.json
@@ -9,15 +9,23 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write ."
+		"format": "prettier --plugin-search-dir . --write .",
+		"test": "vitest",
+		"coverage": "vitest run --coverage"
 	},
 	"devDependencies": {
 		"@popperjs/core": "^2.11.6",
 		"@sveltejs/adapter-auto": "^1.0.0",
 		"@sveltejs/kit": "^1.0.0",
+		"@testing-library/dom": "^8.19.1",
+		"@testing-library/jest-dom": "^5.16.5",
+		"@testing-library/svelte": "^3.2.2",
+		"@testing-library/user-event": "^14.4.3",
 		"@types/leaflet": "^1.9.0",
+		"@types/testing-library__jest-dom": "^5.14.5",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
+		"@vitest/coverage-c8": "^0.26.3",
 		"autoprefixer": "^10.4.7",
 		"classnames": "^2.3.2",
 		"eslint": "^8.28.0",
@@ -25,6 +33,7 @@
 		"eslint-plugin-svelte3": "^4.0.0",
 		"flowbite": "^1.5.5",
 		"flowbite-svelte": "^0.29.2",
+		"jsdom": "^20.0.3",
 		"leaflet": "^1.9.3",
 		"leaflet-providers": "^1.13.0",
 		"postcss": "^8.4.14",
@@ -37,7 +46,8 @@
 		"tailwindcss": "^3.1.5",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
-		"vite": "^4.0.0"
+		"vite": "^4.0.0",
+		"vitest": "^0.26.3"
 	},
 	"type": "module"
 }
